--- a/hima/experiments/temporal_pooling/sweeps/layered_tp_analysis.yaml
+++ b/hima/experiments/temporal_pooling/sweeps/layered_tp_analysis.yaml
@@ -9,7 +9,7 @@ method: grid
 #  goal: minimize
 parameters:
   seed.:
-    values: [40, 41, 42, 43, 44, 45, 46] #, 47, 48, 49] #, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
+    values: [40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51] #, 52, 53, 54, 55, 56, 57, 58, 59]
 
   # for hyperparameter search we don't need too much logging and too much learning
   run_setups..full.sequence_repeats:
@@ -34,23 +34,27 @@ parameters:
 
   blocks..tp1.reset_on_activation:
     values:
-#      - False
-      - True
+      - False
+#      - True
   blocks..tp1.sparsity:
     values:
-      - 8
+#      - 8
 #      - 10
-#      - 12
+      - 12
+      - 16
+      - 20
+      - 30
+      - 0.99
   blocks..tp1.pooling_window:
     values:
+      - 2
       - 5
       - 10
-      - 20
   blocks..tp1.rand_decay_max_ratio:
     values:
       - 1.0
-      - 1.1
-      - 1.3
+      - 1.25
+      - 1.5
 
 command:
   - ${env}
