dchmm: modify factor value update rule

--- a/hima/experiments/hmm/configs/dhmm/dchmm_default.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_default.yaml
@@ -1,11 +1,10 @@
 n_obs_vars: 1
-n_obs_states: 3
 cells_per_column: 10
 n_vars_per_factor: 1
-initial_log_factor_value: 0.1
-lr: 0.01
+initial_log_factor_value: 0
+lr: 1.0
+gamma: 0.1
 regularization: 0.01
-cell_activation_threshold: 0.001
-max_segments_per_cell: 15
-segment_prune_threshold: 0.001
-seed: null
+cell_activation_threshold: 0.0001
+max_segments_per_cell: 100
+segment_prune_threshold: 0.0001
