--- a/hima/modules/htm/tests/configs/dchmm_default.yaml
+++ b/hima/modules/htm/tests/configs/dchmm_default.yaml
@@ -4,7 +4,9 @@ cells_per_column: 4
 n_vars_per_factor: 2
 initial_log_factor_value: 0.0
 lr: 0.01
+gamma: 0.1
 regularization: 0.01
+punishment: 0.001
 cell_activation_threshold: 0.001
 max_segments_per_cell: 15
 segment_prune_threshold: 0.001
