--- a/hima/experiments/hmm/configs/dhmm_runner.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner.yaml
@@ -1,10 +1,13 @@
 log: True
+save_model: False
 project_name: 'mpg_dhmm_test'
 run_tag: null
+
 n_episodes: 1000
 update_rate: 100
 smf_dist: 0.005
 
+experiment: mpg
 hmm_conf: 'configs/dhmm/dchmm_default.yaml'
 mpg_conf: 'configs/mpg/mpg_default.yaml'
 
