--- a/hima/experiments/hmm/configs/hmm/hmm_mc.yaml
+++ b/hima/experiments/hmm/configs/hmm/hmm_mc.yaml
@@ -1,6 +1,8 @@
 cells_per_column: 10
-lr: 0.5
+lr: 1.0
 temp: 1.0
-regularization: 0.1
-learning_mode: mc
+regularization: 0.01
+gamma: 0.1
+punishment: 0.001
+learning_mode: htm
 initialization: uniform
