--- a/hima/experiments/hmm/configs/hmm_runner.yaml
+++ b/hima/experiments/hmm/configs/hmm_runner.yaml
@@ -1,11 +1,11 @@
 log: True
 project_name: 'mpg_hmm_test'
-run_tag: 'monte_carlo'
+run_tag: null
 n_episodes: 5000
-update_rate: 4999
-smf_dist: 0.02
+update_rate: 999
+smf_dist: 0.005
 
-hmm_conf: 'configs/hmm/hmm_bw.yaml'
-mpg_conf: 'configs/mpg/mpg_default.yaml'
+hmm_conf: 'configs/hmm/hmm_mc.yaml'
+mpg_conf: 'configs/mpg/mmpg_default.yaml'
 
-seed: 5389
+seed: 34321
