--- a/hima/experiments/hmm/configs/dhmm_runner_single.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_single.yaml
@@ -1,14 +1,14 @@
 log: True
-save_model: False
+save_model: True
 project_name: 'mpg_dhmm_test'
 run_tag: null
 
-n_episodes: 1000
-update_rate: 100
+n_episodes: 5000
+update_rate: 999
 smf_dist: 0.005
 
 experiment: mpg
 hmm_conf: 'configs/dhmm/dchmm_default.yaml'
-mpg_conf: 'configs/mpg/mpg_default.yaml'
+mpg_conf: 'configs/mpg/mmpg_default.yaml'
 
 seed: null
