dchmm: add self loop for terminal states

--- a/hima/experiments/hmm/configs/dhmm_runner_nstep.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_nstep.yaml
@@ -5,6 +5,9 @@ run_tag: null
 model_path: null
 n_steps: 10
 
+# parameter overrides
+log_self_loop_factor: 2.65
+
 experiment: nstep
 hmm_conf: 'configs/dhmm/dchmm_policy.yaml'
 mpg_conf: 'configs/mpg/mmpg_default.yaml'
