--- a/hima/experiments/hmm/configs/dhmm_runner_policies.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_policies.yaml
@@ -1,7 +1,7 @@
 log: True
 save_model: True
 project_name: 'mmpg_dhmm_test'
-run_tag: loopy
+run_tag: null
 
 n_episodes: 8000
 update_rate: 999
@@ -11,4 +11,4 @@ experiment: mmpg
 hmm_conf: 'configs/dhmm/dchmm_policy.yaml'
 mpg_conf: 'configs/mpg/mmpg_default.yaml'
 
-seed: 11331
+seed: null
