dchmm: update experiments

--- a/hima/experiments/hmm/configs/dhmm_runner_nstep.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_nstep.yaml
@@ -7,6 +7,7 @@ n_steps: 10
 
 # parameter overrides
 log_self_loop_factor: 2.65
+policy: 0
 
 experiment: nstep
 hmm_conf: 'configs/dhmm/dchmm_policy.yaml'
