--- a/hima/experiments/hmm/configs/dhmm/dchmm_default.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_default.yaml
@@ -8,5 +8,7 @@ regularization: 0.01
 punishment: 0.001
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
+max_segments_for_spec_state: 1000
 segment_prune_threshold: 0.0001
-loop_sequence: True
+loop_sequence: False
+log_self_loop_factor: 1
