--- a/hima/experiments/hmm/configs/dhmm/dchmm_policy.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_policy.yaml
@@ -1,7 +1,7 @@
 n_obs_vars: 2
 cells_per_column: 10
 n_vars_per_factor: 2
-initial_log_factor_value: 0
+initial_log_factor_value: 1
 lr: 1.0
 gamma: 0.1
 regularization: 0.01
@@ -10,5 +10,4 @@ cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
 max_segments_for_spec_state: 1000
 segment_prune_threshold: 0.0001
-loop_sequence: False
-log_self_loop_factor: 1
+loop_sequence: True
