--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,12 +1,11 @@
 cells_per_column: 10
-n_vars_per_factor: 200
+n_vars_per_factor: 20
 factor_activation_threshold: 10  # number of active variables in a receptive field to active factor
-factors_per_var: 10
-initial_log_factor_value: 1
-lr: 1.0
-gamma: 0.1
-regularization: 0.01
-punishment: 0.001
+factors_per_var: 5
+initial_factor_value: 1.0
+beta: 0.5
+lr: 0.01
+punishment: 0.01
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
 max_segments_for_spec_state: 1000
