dchmm: add n-step prediction

--- a/hima/experiments/hmm/configs/dhmm_runner_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_pinball.yaml
@@ -3,10 +3,11 @@ save_model: False
 project_name: 'pinball_dhmm_test'
 run_tag: null
 
-n_episodes: 100
+n_episodes: 51
 update_rate: 10
 max_steps: 50
 log_gif_fps: 10
+prediction_steps: 2
 
 experiment: pinball
 hmm_conf: 'configs/dhmm/dchmm_pinball.yaml'
