--- a/hima/experiments/temporal_pooling/sweeps/fastw_recurrent.yaml
+++ b/hima/experiments/temporal_pooling/sweeps/fastw_recurrent.yaml
@@ -9,7 +9,7 @@ parameters:
 
   # for hyperparameter search we don't need too much logging and too much learning
   run_setups..full.item_repeats:
-    value: 3
+    value: 1
   run_setups..full.sequence_repeats:
     value: 4
   run_setups..full.epochs:
@@ -24,6 +24,15 @@ parameters:
     value: 30
   blocks..gen.value_encoder:
     value: random
+  blocks..gen.active_size:
+    value: 16
+
+  blocks..sp1.output_sds:
+    value: [400, 16]
+  blocks..sp1.synPermActiveInc:
+    value: 0.02
+  blocks..sp1.synPermInactiveDec:
+    value: 0.002
 
   pipeline.:
     values:
@@ -34,6 +43,16 @@ parameters:
 
       -
         - ___.input -> gen.output
+        - block: concat
+          pipes:
+            - sp1.output -> concat.feedforward_1
+            - gen.output -> concat.feedforward_2
+        - concat.output -> sp1.feedforward
+        - block: concat
+          pipes:
+            - sp1.output -> concat.feedforward_1
+            - gen.output -> concat.feedforward_2
+        - concat.output -> sp1.feedforward
         - block: concat
           pipes:
             - sp1.output -> concat.feedforward_1
