dchmm: cleanup code

--- a/hima/experiments/hmm/configs/dhmm_runner_single.yaml
+++ b/hima/experiments/hmm/configs/dhmm_runner_single.yaml
@@ -1,5 +1,5 @@
 log: True
-save_model: True
+save_model: False
 project_name: 'mpg_dhmm_test'
 run_tag: null
 
@@ -8,7 +8,7 @@ update_rate: 999
 smf_dist: 0.005
 
 experiment: mpg
-hmm_conf: 'configs/dhmm/dchmm_default.yaml'
-mpg_conf: 'configs/mpg/mmpg_default.yaml'
+hmm_conf: 'configs/dhmm/dchmm_single.yaml'
+env_conf: 'configs/mpg/mmpg_default.yaml'
 
 seed: null
