--- a/hima/experiments/hmm/configs/dhmm/dchmm_single.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_single.yaml
@@ -1,14 +1,14 @@
 n_obs_vars: 1
+shape: [ 1, 1 ]
 cells_per_column: 10
 n_vars_per_factor: 1
-initial_log_factor_value: 0
+factor_activation_threshold: 0
+factors_per_var: 10
+initial_factor_value: 0.1
+beta: 10.0  # importance of active vars for receptive field
 lr: 1.0
-gamma: 0.1
-regularization: 0.01
-punishment: 0.001
+punishment: 1.0
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
 max_segments_for_spec_state: 1000
 segment_prune_threshold: 0.0001
-loop_sequence: False
-log_self_loop_factor: 1
