--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,11 +1,12 @@
-cells_per_column: 4
+cells_per_column: 10
 n_vars_per_factor: 9
 factor_activation_threshold: 0  # number of active variables in a receptive field to active factor
 factors_per_var: 10
-initial_factor_value: 0.1
+initial_factor_value: 0.0
 beta: 10.0  # importance of active vars for receptive field
-lr: 1
-punishment: 0.0
+lr: 0.5
+gamma: 0.1
+punishment: 0.1
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
 max_segments_for_spec_state: 1000
