--- a/hima/experiments/hmm/configs/dhmm/dchmm_single.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_single.yaml
@@ -4,10 +4,11 @@ cells_per_column: 10
 n_vars_per_factor: 1
 factor_activation_threshold: 0
 factors_per_var: 10
-initial_factor_value: 0.1
+initial_factor_value: 0.0
 beta: 10.0  # importance of active vars for receptive field
-lr: 1.0
-punishment: 1.0
+lr: 0.5
+gamma: 0.1
+punishment: 0.1
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 100
 max_segments_for_spec_state: 1000
