--- a/hima/experiments/hmm/configs/belieftm_runner_multi.yaml
+++ b/hima/experiments/hmm/configs/belieftm_runner_multi.yaml
@@ -1,5 +1,5 @@
 log: True
-save_model: False
+save_model: True
 project_name: 'mmpg_belieftm_test'
 run_tag: null
 
@@ -7,10 +7,11 @@ n_episodes: 8000
 update_rate: 500
 smf_dist: 0.005
 max_steps: 100
+use_feedback: False
 
-debug_tm_state: False
+debug_tm_state: True
 chunk_size: 100
-debug_range: [ 0, 100 ]
+debug_range: [ 1000, 1100 ]
 
 experiment: mmpg
 hmm_conf: 'configs/belieftm/mpg_multi.yaml'
