--- a/hima/experiments/hmm/configs/belieftm_runner_single.yaml
+++ b/hima/experiments/hmm/configs/belieftm_runner_single.yaml
@@ -1,11 +1,19 @@
 log: True
-save_model: False
+save_model: True
 project_name: 'mpg_belieftm_test'
-run_tag: null
+run_tag: test_bar
 
-n_episodes: 5000
-update_rate: 999
+n_episodes: 100
+update_rate: 50
 smf_dist: 0.005
+max_steps: 50
+
+debug_tm_state: False
+chunk_size: 100
+debug_range: [ 1000, 1100 ]
+
+n_step_test: 10
+mc_iterations: 100
 
 experiment: mpg
 hmm_conf: 'configs/belieftm/mpg_single.yaml'
