--- a/hima/experiments/hmm/configs/runner/hmm/mpg_single.yaml
+++ b/hima/experiments/hmm/configs/runner/hmm/mpg_single.yaml
@@ -1,9 +1,13 @@
 log: True
-project_name: 'mpg_hmm_test'
-run_tag: null
+save_model: False
+project_name: 'ijcai_test'
+run_tag: hmm
+
 n_episodes: 5000
 update_rate: 999
 smf_dist: 0.005
+max_steps: 50
+n_step_test: 10
 
 hmm_conf: 'configs/hmm/hmm_mc.yaml'
 mpg_conf: 'configs/mpg/mmpg_default.yaml'
