--- a/hima/experiments/hmm/configs/runner/hmm/mpg_single.yaml
+++ b/hima/experiments/hmm/configs/runner/hmm/mpg_single.yaml
@@ -1,15 +1,16 @@
 log: True
-save_model: False
+save_model: True
 project_name: 'ijcai_test'
 run_tag: hmm
 
-n_episodes: 5000
-update_rate: 999
+n_episodes: 3000
+update_rate: 2999
 smf_dist: 0.005
 max_steps: 50
 n_step_test: 10
+log_path: 'logs'
 
-hmm_conf: 'configs/hmm/hmm_mc.yaml'
+hmm_conf: 'configs/hmm/hmm_bw.yaml'
 mpg_conf: 'configs/mpg/mmpg_default.yaml'
 
 seed: null
