htm: update runner

--- a/hima/experiments/hmm/configs/runner/htm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/htm/pinball.yaml
@@ -1,19 +1,19 @@
 log: True
 save_model: False
-project_name: 'pinball_decoder_test'
+project_name: 'ijcai_test'
 run_tag: htm
 
-n_episodes: 501
+n_episodes: 201
 update_rate: 10
 max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
-mc_iterations: 100
 action: [ 0.0, 5 ]
 
 experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/htm/pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
+setup: 'guard'
 
 seed: null
