--- a/hima/experiments/hmm/configs/runner/dhmm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/dhmm/pinball.yaml
@@ -1,7 +1,7 @@
 log: True
 save_model: False
-project_name: 'pinball_dhmm_decoder_test'
-run_tag: null
+project_name: 'ijcai_test'
+run_tag: dchmm
 
 n_episodes: 501
 update_rate: 10
@@ -14,5 +14,6 @@ experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/dhmm/dchmm_pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
+setup: 'guard'
 
 seed: null
