ijcai23: update experiments

--- a/hima/experiments/hmm/configs/runner/belieftm/mpg_single.yaml
+++ b/hima/experiments/hmm/configs/runner/belieftm/mpg_single.yaml
@@ -1,10 +1,10 @@
 log: True
-save_model: True
-project_name: 'mpg_belieftm_test'
-run_tag: test_bar
+save_model: False
+project_name: 'ijcai_test'
+run_tag: belieftm
 
-n_episodes: 100
-update_rate: 50
+n_episodes: 3000
+update_rate: 2999
 smf_dist: 0.005
 max_steps: 50
 log_path: 'logs'
@@ -15,6 +15,7 @@ debug_range: [ 1000, 1100 ]
 
 n_step_test: 10
 mc_iterations: 100
+bucket_size: 5
 
 experiment: mpg
 hmm_conf: 'configs/belieftm/mpg_single.yaml'
