--- a/hima/experiments/hmm/configs/runner/htm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/htm/pinball.yaml
@@ -8,12 +8,15 @@ update_rate: 10
 max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
-action: [ 0.0, 5 ]
+actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
+positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
+#actions: [[ 3.14, 5 ], [0, 3]]
+#positions: [[0, -9], [0, 0]]
 
 experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/htm/pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
-setup: 'guard'
+setup: 'fork'
 
 seed: null
