--- a/hima/experiments/hmm/configs/runner/belieftm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/belieftm/pinball.yaml
@@ -3,18 +3,19 @@ save_model: False
 project_name: 'ijcai_test'
 run_tag: belieftm
 
-n_episodes: 200
+n_episodes: 201
 update_rate: 10
 max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
 mc_iterations: 100
-action: [ 0.0, 5 ]
+actions: [[ 3.14, 5 ], [0, 3]]
+positions: [[0, -9], [0, 0]]
 
 experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/belieftm/pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
-setup: 'guard'
+setup: 'frog'
 
 seed: null
