--- a/hima/experiments/hmm/sweeps/ijcai/belieftm_pinball.yaml
+++ b/hima/experiments/hmm/sweeps/ijcai/belieftm_pinball.yaml
@@ -1,4 +1,4 @@
-project: ijcai_pinball
+project: ijcai_pinball2
 entity: hauska
 program: runners/belieftm_runner.py
 method: grid
@@ -10,10 +10,8 @@ parameters:
     values: ['belieftm']
   run.seed:
     values: [43228, 78273, 83207]
-  run.mc_iterations:
-    values: [100]
-  run.setup:
-    values: ['fork', 'guard']
+  hmm.cells_per_column:
+    values: [1, 10]
 command:
   - ${env}
   - python
