--- a/hima/experiments/hmm/sweeps/ijcai/hmm_pinball.yaml
+++ b/hima/experiments/hmm/sweeps/ijcai/hmm_pinball.yaml
@@ -1,4 +1,4 @@
-project: ijcai_pinball
+project: ijcai_pinball2
 entity: hauska
 program: runners/hmm_runner.py
 method: grid
@@ -10,10 +10,10 @@ parameters:
     values: ['hmm']
   run.seed:
     values: [43228, 78273, 83207]
-  run.setup:
-    values: ['fork', 'guard']
   hmm.cells_per_column:
-    values: [1, 15]
+    values: [1, 10]
+  sp.potentialPct:
+    values: [1.0]
 command:
   - ${env}
   - python
