lstm: add sweeps for ijcai

--- a/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
@@ -16,6 +16,6 @@ experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/lstm/default.yaml'
 env_conf: 'configs/pinball/default.yaml'
-setup: 'fork'
+setup: 'frog'
 
 seed: null
