--- a/hima/experiments/hmm/configs/runner/lstm/mpg_single.yaml
+++ b/hima/experiments/hmm/configs/runner/lstm/mpg_single.yaml
@@ -1,10 +1,10 @@
 log: True
 save_model: False
 project_name: 'lstm_test'
-run_tag: null
+run_tag: lstm
 
 n_episodes: 3000
-update_rate: 999
+update_rate: 2999
 smf_dist: 0.005
 max_steps: 50
 n_step_test: 10
@@ -15,4 +15,4 @@ experiment: mpg
 hmm_conf: 'configs/lstm/default.yaml'
 env_conf: 'configs/mpg/mmpg_default.yaml'
 
-seed: 7564
+seed: null
