--- a/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
@@ -9,13 +9,16 @@ max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
 mc_iterations: 100
-actions: [[ 3.14, 5 ], [0, 3]]
-positions: [[0, -9], [0, 0]]
+
+actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
+positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
+#actions: [[ 3.14, 5 ], [0, 3]]
+#positions: [[0, -9], [0, 0]]
 
 experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/lstm/default.yaml'
 env_conf: 'configs/pinball/default.yaml'
-setup: 'frog'
+setup: 'fork'
 
 seed: null
