--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -1,28 +1,19 @@
 _type_: stp.synthetic_sequences
 project: stp.fast_weights
-log: True    # wandb logging, use 'dry' for dummy do-nothing logging
+log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
-run_setup:
-  n_sequences: 5
-  steps_per_sequence: 20
-  sequence_repeats: 2
-  item_repeats: 1
+iterate:
   epochs: 5
-  total_repeats: ...
-  log_repeat_schedule: 3
-  log_epoch_schedule: 2
+  sequences: [5, 2]
+  elements: 20
 
-dataset:
-  source:
-    _base_: generator.synthetic_sequences
-    # elements
-    n_elements: 200
-    active_size: 10
-    element_encoder: encoder.random_fixed_sds
-    # sequences
-    n_sequences: 10
-    sequence_length: 1
+data:
+  _base_: $_base.dataset.synthetic_sequences.general
+  alphabet_size: 200
+  encoder:
+    _base_: $_base.encoder.random.fixed_sds
+    sds: [500, 10]
 
 generator:
   synthetic_general_sequences:
@@ -32,10 +23,9 @@ generator:
     n_sequences: 8
     sequence_length: 40
 
-encoder:
-  ...
-
-run_setups:
+iterate_setups:
+  base:
+    _type_:
   simple:
     n_sequences: 5
 #    n_sequences: 2
@@ -69,6 +59,10 @@ run_setups:
     total_repeats: ...
     log_repeat_schedule: 5
     log_epoch_schedule: 10
+
+log_schedule:
+  log_repeat_schedule: 3
+  log_epoch_schedule: 2
 
 pipeline:
   - ___.input -> gen.output
