--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -5,7 +5,7 @@ log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test met
 seed: 42
 iterate:
   epochs: 5
-  sequences: [5, 2]
+  sequences: 5
   elements: 20
 
 data:
@@ -15,63 +15,55 @@ data:
     _base_: $_base.encoder.random.fixed_sds
     sds: [500, 10]
 
-generator:
-  synthetic_general_sequences:
-    _base_: $_base.generator.synthetic_sequences.general
-    n_elements: 40
-    element_encoder: random
-    n_sequences: 8
-    sequence_length: 40
+model:
+  api_block: ___
+  pipeline:
+    - ___.input -> gen.output
+    - gen.output -> sp1.feedforward
+    - sp1.compute
+    - ???.output -> ___.output
 
-iterate_setups:
-  base:
-    _type_:
-  simple:
-    n_sequences: 5
-#    n_sequences: 2
-    steps_per_sequence: 20
-#    steps_per_sequence: 3
-    sequence_repeats: 2
-    item_repeats: 1
-#    epochs: 2
-    epochs: 5
-    # FIXME: to ???
-    total_repeats: ...
-    log_repeat_schedule: 3
-    log_epoch_schedule: 2
-
-  full:
-    n_sequences: 10
-    steps_per_sequence: 30
-    sequence_repeats: 10
-    item_repeats: 1
-    epochs: 10
-    total_repeats: ...
-    log_repeat_schedule: 5
-    log_epoch_schedule: 2
-
-  repeating_one:
-    n_sequences: 10
-    steps_per_sequence: 1
-    sequence_repeats: 1
-    item_repeats: 7
-    epochs: 10
-    total_repeats: ...
-    log_repeat_schedule: 5
-    log_epoch_schedule: 10
+blocks:
+  ___:
+    _type_: block.storage
+    input_sds: ???
+    output_sds: ???
+  gen:
+    _type_: block.storage
+  sp1:
+    _base_: custom_sp.default
+    sp_type: vectorized
+    output_sds: [500, 10]
+    initial_rf_sparsity: 0.2
+    max_rf_sparsity: 0.1
+    max_rf_to_input_ratio: 0.5
+#    learning_rate_inc: 0.1
+    learning_rate_inc: 0.02
+#    learning_rate_dec: 0.01
+    learning_rate_dec: 0.005
+    newborn_pruning_cycle: 5
+    newborn_pruning_stages: 3
+    boosting_k: 2.0
 
 log_schedule:
   log_repeat_schedule: 3
   log_epoch_schedule: 2
 
-pipeline:
-  - ___.input -> gen.output
-  - ???.output -> ___.output
+iterate_setups:
+  simple: ...
 
-blocks:
-  ___:
-    _type_: storage
-    in_out: True
-    input_sds: ???
-  gen:
-    _type_: storage
+custom_sp:
+  default:
+    _type_: sp.custom
+    seed: ???
+    # input
+    feedforward_sds: ???
+    initial_rf_sparsity: 0.3
+    max_rf_sparsity: 0.1
+    max_rf_to_input_ratio: 2.5
+    # output
+    output_sds: ???
+    # learning
+    min_overlap_for_activation: 3
+    learning_rate_inc: 0.1
+    learning_rate_dec: 0.01
